--- a/example.env
+++ b/example.env
@@ -1,3 +1,3 @@
 UPSTASH_VECTOR_REST_URL="YOUR_UPSTASH_URL"
 UPSTASH_VECTOR_REST_TOKEN="YOUR_UPSTASH_TOKEN"
-ANTHROPIC_API_KEY="YOUR_ANTHROPIC_API_TOKEN"
+HUGGINGFACEHUB_API_TOKEN="YOUR_HUGGINGFACE_API_TOKEN"
